[package]
name         = "buzz"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.76"

[[bin]]
name = "buzz"
path = "src/bin/main.rs"

[dependencies]
# core esp crates
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "esp-alloc",
  "esp-radio",
  "embassy",
  "esp32",
] }

# esp support crates
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
esp-println = { version = "0.16.1", features = ["log-04", "defmt-espflash", "esp32"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }

# embassy
embassy-executor = "0.9.0"
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-time = "0.5.0"
embassy-sync = "0.6.0"
embedded-io-async = "0.6.1"
static_cell = "2.1.0"

# misc
defmt = "0.3.8"
critical-section = "1.2.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

picoserve = { version = "0.17.1", features = ["json", "alloc", "embassy", "ws"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
